apps/media/overseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - overseerr.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: overseerr
          port: 5055
